<resources>
    <string name="app_name">My Application</string>
    <string name="resset">resset</string>
    <string name="reset">RESET</string>
    <string name="free_throwA">FREE THROW</string>
    <string name="_2_pointsA">+2 POINTS</string>
    <string name="_3_points">+3 POINTS</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="_3_pointsA">+3 POINTS</string>
    <string name="_2_points">+2 POINTS</string>
    <string name="free_throw">FREE THROW</string>
    <string name="textview">TextView</string>
    <string name="a">0</string>
    <string name="b">0</string>
</resources>
